--- a/style.css
+++ b/style.css
@@ -72,9 +72,9 @@ body:before {
     margin-top: 40px;
 }
 
-/*.bottom-margin {
+.bottom-margin {
     margin-bottom: 40px;
-} */
+}
 
 .text-center {
     text-align: center;
